<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">轻微博</string>
    <string name="login">登录</string>
    <string name="tabs_ground">广场</string>
    <string name="tabs_index">主页</string>
    <string name="tabs_setting">设置</string>
    <string name="user_name">用户名</string>
    <string name="username">用户名</string>
    <string name="ib_desc">for post</string>
    <string name="menu_post">发表微博</string>
    <string name="menu_search">搜索微博</string>
    <string name="nav_menu">导航菜单</string>
    <string name="menu_login">登录</string>

    <string name="pull_to_refresh_pull_label">下拉以刷新…</string>
    <string name="pull_to_refresh_release_label">释放以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">轻触以刷新…</string>
    <string name="load_more">加载更多</string>
    <string name="load_more_ing">加载中</string>
    <string name="post_weibo">发表</string>
    <string name="search_btn">搜索</string>
    <string name="search_hint">输入搜索内容</string>
    <string name="post_content_hint">输入微博内容</string>
    <string name="user_info">个人信息</string>
    <string name="pref_image_show">显示图片</string>
    <string name="other_settings">其它设置</string>
    <string name="use_position">地理位置</string>
    <string name="my_account">我的账户</string>
    <string name="follow_btn">关注</string>
    <string name="pm_btn">私信</string>
    <string name="about">关于</string>
    <string name="menu_comment">回复</string>
    <string name="menu_forward">转发</string>
    <string name="menu_favorite">赞</string>
    <string name="post_comment">发表回复</string>
    <string name="同时评论到原微博"/>
    <string name="comment_origin">评论到原微博</string>
    <string name="comment_current">评论到当前微博</string>
    <string name="about_string">轻微博 0.0.9\nzqc10@software.nju.edu.cn</string>
    <string name="logout">注销登录</string>
    <string name="block_setting">屏蔽设置</string>
    <string name="edit">修改</string>
    <string name="remove">删除</string>
    <string name="menu_add">添加</string>
    <string name="enable_block">启用屏蔽</string>
    <string name="menu_share">分享</string>
    <string name="pref_block_keyword">关键词屏蔽</string>
    <string name="pref_block_time">时间段屏蔽</string>
    <string name="pref_block_source">来源屏蔽</string>
    <string name="block_source">屏蔽来源</string>
    <string name="clear_cache">清除缓存</string>

</resources>
