<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:id="@+id/post_content"
            android:inputType="textMultiLine"
            android:hint="@string/post_content_hint"
            android:gravity="top|left"
            android:lines="12"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/use_position"
                    android:id="@+id/use_position"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text=""
                    android:id="@+id/textView"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_origin"
            android:id="@+id/comment_origin"
            android:layout_gravity="left|center_vertical"/>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_current"
            android:id="@+id/comment_current"
            android:layout_gravity="left|center_vertical"
            android:checked="false"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_weibo"
            android:id="@+id/post_weibo"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
</LinearLayout>